--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,15 @@
 <!-- Featured Projects -->
 <div class="featured_projects">
   <h2>Featured Projects</h2>
-  <a href="https://lios-colors.web.app" rel="noopener" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
+  <a href="https://lios-colors.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
     <h3>LiOS Colors</h3>
     <p>LiOS Colors is a browsable library of beautiful colors, whose main aim is to provide translucent colors for UI design. LiOS-Colors is a part of the LiOS-Org and a fork of meodai/color-names.</p>
   </a>
-  <a href="https://tech-informal.web.app" rel="noopener" class="featured_card_right frosted_background frosted_texture mouse_cursor_gradient_tracking">
+  <a href="https://tech-informal.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_right frosted_background frosted_texture mouse_cursor_gradient_tracking">
     <h3>Tech Informal</h3>
     <p>Tech Informal is your go-to source for clear and engaging content on technology, AI, software, and gadgets. Whether you're a beginner or tech-savvy, we simplify complex topics so anyone can learn, explore, and stay updated. Our platform features blogs, articles, and newsletters that break down the latest in tech and AI — all written to be accessible, informative, and fun to read.</p>
   </a>
-  <a href="https://virtual-periodictable.web.app" rel="noopener" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
+  <a href="https://virtual-periodictable.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
     <h3>Virtual Periodic Table</h3>
     <p>Virtual-PeriodicTable is an open-source project designed to provide a customizable and interactive periodic table. Unlike many existing solutions, this project emphasizes simplicity and accessibility, allowing anyone with basic knowledge of HTML and CSS to modify it according to their preferences.</p>
   </a>
