added header embedded navigation

--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="LiOS is a group of small open-source projects that aim to provide valuable, time-efficient content. We ensure that if you check out any of our projects, your time is not wasted. LiOS projects focus on solving specific issues, providing modularity, and overall offering alternatives.">
+  <meta name="google-site-verification" content="vfPaCxovKFl4kREJ3fW_jAhWjykeLXsMMO7RhsZ2Dk0" />
+  <meta name="msvalidate.01" content="589274791C4B024A643144BBDF68B364" />
+  <meta name="description" content="LiOS is a group of small open-source projects that aim to provide valuable, time-efficient content.">
   <title>LiOS : Free & Open Source Software Projects and Resources</title>
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
   <script src="https://lios-open.web.app/mouse_cursor_gradient_tracking.js"></script>
   <link rel="stylesheet" href="LiOS.css">
 </head>
 <body>
-  <!-- <div class="header_embedded_navigation frosted_background frosted_texture">
-    <a href="/" class="navigation_button frosted_background">LiOS</a>
-  </div> -->
+  <!-- Header Embedded Navigation -->
+  <div class="header_embedded_navigation frosted_background frosted_texture">
+    <a href="/" class="navigation_title"><img src="assets/images/favicon.png" alt="LiOS"></a>
+    <div class="navigation_container">
+      <a href="/" class="frosted_glass frosted_texture navigation_button"><svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">  <path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8" />  <path d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" /></svg>Home</a>
+    </div>
+  </div>
 </body>
-<div class="for_seo frosted_background frosted_texture  mouse_cursor_gradient_tracking">
-  <h1>LiOS : Free & Open Source Software Projects and Resources</h1>
-  <p>LiOS is a group of small open-source projects that aim to provide valuable, time-efficient content. We ensure that if you check out any of our projects, your time is not wasted. LiOS projects focus on solving specific issues, providing modularity, and overall offering alternatives.</p>
+<div class="main_container">
+  <div class="for_seo frosted_background frosted_texture  mouse_cursor_gradient_tracking">
+    <h1>LiOS : Free & Open Source Software Projects and Resources</h1>
+    <p>LiOS is a group of small open-source projects that aim to provide valuable, time-efficient content. We ensure that if you check out any of our projects, your time is not wasted. LiOS projects focus on solving specific issues, providing modularity, and overall offering alternatives.</p>
+  </div>
+  <!-- Featured Projects -->
+  <div class="featured_projects">
+    <h2>Featured Projects</h2>
+    <a href="https://lios-colors.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
+      <h3>LiOS Colors</h3>
+      <p>LiOS Colors is a browsable library of beautiful colors, whose main aim is to provide translucent colors for UI design. LiOS-Colors is a part of the LiOS-Org and a fork of meodai/color-names.</p>
+    </a>
+    <a href="https://tech-informal.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_right frosted_background frosted_texture mouse_cursor_gradient_tracking">
+      <h3>Tech Informal</h3>
+      <p>Tech Informal is your go-to source for clear and engaging content on technology, AI, software, and gadgets. Whether you're a beginner or tech-savvy, we simplify complex topics so anyone can learn, explore, and stay updated. Our platform features blogs, articles, and newsletters that break down the latest in tech and AI — all written to be accessible, informative, and fun to read.</p>
+    </a>
+    <a href="https://virtual-periodictable.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
+      <h3>Virtual Periodic Table</h3>
+      <p>Virtual-PeriodicTable is an open-source project designed to provide a customizable and interactive periodic table. Unlike many existing solutions, this project emphasizes simplicity and accessibility, allowing anyone with basic knowledge of HTML and CSS to modify it according to their preferences.</p>
+    </a>
 </div>
-<!-- Featured Projects -->
-<div class="featured_projects">
-  <h2>Featured Projects</h2>
-  <a href="https://lios-colors.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
-    <h3>LiOS Colors</h3>
-    <p>LiOS Colors is a browsable library of beautiful colors, whose main aim is to provide translucent colors for UI design. LiOS-Colors is a part of the LiOS-Org and a fork of meodai/color-names.</p>
-  </a>
-  <a href="https://tech-informal.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_right frosted_background frosted_texture mouse_cursor_gradient_tracking">
-    <h3>Tech Informal</h3>
-    <p>Tech Informal is your go-to source for clear and engaging content on technology, AI, software, and gadgets. Whether you're a beginner or tech-savvy, we simplify complex topics so anyone can learn, explore, and stay updated. Our platform features blogs, articles, and newsletters that break down the latest in tech and AI — all written to be accessible, informative, and fun to read.</p>
-  </a>
-  <a href="https://virtual-periodictable.web.app" target="_blank" rel="noopener noreferrer" class="featured_card_left frosted_background frosted_texture mouse_cursor_gradient_tracking">
-    <h3>Virtual Periodic Table</h3>
-    <p>Virtual-PeriodicTable is an open-source project designed to provide a customizable and interactive periodic table. Unlike many existing solutions, this project emphasizes simplicity and accessibility, allowing anyone with basic knowledge of HTML and CSS to modify it according to their preferences.</p>
-  </a>
 </html>
