--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
         our projects, your time is not wasted. LiOS projects focus on solving
         specific issues, providing modularity, and overall offering
         alternatives.
+        <br /><br />
+        <a
+          href="https://github.com/LiOS-org"
+          class="lios-button frosted_background"
+          ><span>View on GitHub</span></a
+        >
       </p>
     </div>
     <h2 class="for-card-1">Our Projects</h2>
