--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       type="image/x-icon"
     />
     <script src="https://lios-open.web.app/mouse_cursor_gradient_tracking.js"></script>
+    <script src="https://lios-open.web.app/modules/JS/windows.js"></script>
     <link rel="stylesheet" href="LiOS.css" />
   </head>
   <body>
@@ -31,12 +32,17 @@
         specific issues, providing modularity, and overall offering
         alternatives.
         <br /><br />
+      </p>
+      <div class="lios-button-group">
         <a
           href="https://github.com/LiOS-org"
           class="lios-button frosted_background"
           ><span>View on GitHub</span></a
         >
-      </p>
+        <a href="#About" class="lios-button frosted_background"
+          ><span>About</span></a
+        >
+      </div>
     </div>
     <h2 class="for-card-1">Our Projects</h2>
     <div class="lios-card-container card-container-1">
@@ -122,6 +128,61 @@
             class="lios-button frosted_background"
             ><span>View on GitHub</span></a
           >
+        </div>
+      </div>
+    </div>
+    <!-- Windows -->
+    <!-- About -->
+    <div
+      class="lios-window-container frosted_background frosted_texture"
+      id="About"
+    >
+      <div class="lios-window-titlebar">
+        <span class="lios-window-title">About</span>
+        <span class="lios-window-close" data-lios-window-close>X</span>
+      </div>
+      <hr />
+      <div class="lios-window">
+        <div class="lios-window-contents">
+          <img src="assets/images/favicon.png" alt="LiOS" class="favicon" />
+          <div class="lios-window-header"><span>LiOS</span></div>
+          <p>
+            LiOS is a group of small open-source projects that aim to provide
+            valuable, time-efficient content. We ensure that if you check out
+            any of our projects, your time is not wasted. LiOS projects focus on
+            solving specific issues, providing modularity, and overall offering
+            alternatives.
+          </p>
+          <div class="lios-window-card frosted_background">
+            <div class="lios-window-card-title">
+              <span>Contacts Information</span>
+              <a
+                href="mailto:liosorganization@gmail.com"
+                class="lios-window-value-row"
+                ><span class="lios-window-key">Mail</span
+                ><span class="lios-window-value"
+                  >liosorganization@gmail.com</span
+                ></a
+              >
+              <a
+                href="https://github.com/LiOS-org"
+                class="lios-window-value-row"
+                ><span class="lios-window-key">GitHub</span
+                ><span class="lios-window-value"
+                  >https://github.com/LiOS-org/LiOS</span
+                ></a
+              >
+            </div>
+          </div>
+          <div class="lios-window-card frosted_background">
+            <div class="lios-window-card-title">
+              <span>General Information</span>
+              <div class="lios-window-value-row">
+                <span class="lios-window-key">LiOS Open Version</span>
+                <span class="lios-window-value">unrealeased, rolling</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
