Added link to VPT alpha channel

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
             class="lios-button frosted_background"
             ><span>View on GitHub</span></a
           >
+          <a href="https://virtual-periodictable--alpha-8wsifrhg.web.app/" class="lios-button frosted_background"><span>Alpha Channel</span></a>
         </div>
       </div>
       <div class="lios-card">
