updated domain names

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <div class="lios-card-container card-container-1">
       <div class="lios-card">
         <img
-          src="https://virtual-periodictable.web.app/assets/Favicon/500x500.png"
+          src="https://periodictable.liosorg.com//assets/Favicon/500x500.png"
           alt="Virtual Periodic Table"
           class="favicon"
         />
@@ -63,7 +63,7 @@
         </p>
         <div class="lios-button-group">
           <a
-            href="https://virtual-periodictable.web.app/"
+            href="https://periodictable.liosorg.com//"
             class="lios-button frosted_background"
             ><span>View Project</span></a
           >
@@ -77,7 +77,7 @@
       </div>
       <div class="lios-card">
         <img
-          src="https://lios-colors.web.app/assets/favicon.svg"
+          src="https://colors.liosorg.com/assets/favicon.svg"
           alt="LiOS Colors"
           class="favicon"
         />
@@ -90,7 +90,7 @@
         </p>
         <div class="lios-button-group">
           <a
-            href="https://lios-colors.web.app/"
+            href="https://colors.liosorg.com/"
             class="lios-button frosted_background"
             ><span>View Project</span></a
           >
@@ -104,7 +104,7 @@
       <div class="lios-card">
         <video class="favicon" autoplay="" muted="" loop="" playsinline="">
           <source
-            src="https://tech-informal.web.app/assets/favicon/favicon.mp4"
+            src="https://techinformal.liosorg.com/assets/favicon/favicon.mp4"
             type="video/mp4"
           />
         </video>
@@ -120,7 +120,7 @@
         </p>
         <div class="lios-button-group">
           <a
-            href="https://tech-informal.web.app/"
+            href="https://techinformal.liosorg.com/"
             class="lios-button frosted_background"
             ><span>View Project</span></a
           >
