feature(dynamic construction): The homepage now dynamically constructs itself using latest metadata fetched from projects directly

--- a/public/index.html
+++ b/public/index.html
@@ -46,91 +46,7 @@
     </div>
     <h2 class="for-card-1">Our Projects</h2>
     <div class="lios-card-container card-container-1">
-      <div class="lios-card">
-        <img
-          src="https://periodictable.liosorg.com//assets/Favicon/500x500.png"
-          alt="Virtual Periodic Table"
-          class="favicon"
-        />
-        <h3>Virtual Periodic Table</h3>
-        <hr />
-        <p>
-          Virtual-PeriodicTable is an open-source project designed to provide a
-          customizable and interactive periodic table. Unlike many existing
-          solutions, this project emphasizes simplicity and accessibility,
-          allowing anyone with basic knowledge of HTML and CSS to modify it
-          according to their preferences.
-        </p>
-        <div class="lios-button-group">
-          <a
-            href="https://periodictable.liosorg.com//"
-            class="lios-button frosted_background"
-            ><span>View Project</span></a
-          >
-          <a
-            href="https://github.com/LiOS-org/Virtual-PeriodicTable"
-            class="lios-button frosted_background"
-            ><span>View on GitHub</span></a
-          >
-          <a href="https://virtual-periodictable--alpha-yg6impu4.web.app/" class="lios-button frosted_background"><span>Alpha Channel</span></a>
-        </div>
-      </div>
-      <div class="lios-card">
-        <img
-          src="https://colors.liosorg.com/assets/favicon.svg"
-          alt="LiOS Colors"
-          class="favicon"
-        />
-        <h3>LiOS:Colors</h3>
-        <hr />
-        <p>
-          LiOS Colors is a browsable library of beautiful colors, whose main aim
-          is to provide translucent colors for UI design. LiOS-Colors is a part
-          of the LiOS-Org and a fork of meodai/color-names.
-        </p>
-        <div class="lios-button-group">
-          <a
-            href="https://colors.liosorg.com/"
-            class="lios-button frosted_background"
-            ><span>View Project</span></a
-          >
-          <a
-            href="https://github.com/LiOS-org/LiOS-Colors"
-            class="lios-button frosted_background"
-            ><span>View on GitHub</span></a
-          >
-        </div>
-      </div>
-      <div class="lios-card">
-        <video class="favicon" autoplay="" muted="" loop="" playsinline="">
-          <source
-            src="https://techinformal.liosorg.com/assets/favicon/favicon.mp4"
-            type="video/mp4"
-          />
-        </video>
-        <h3>Tech Informal</h3>
-        <hr />
-        <p>
-          Tech Informal is your go-to source for clear and engaging content on
-          technology, AI, software, and gadgets. Whether you're a beginner or
-          tech-savvy, we simplify complex topics so anyone can learn, explore,
-          and stay updated. Our platform features blogs, articles, and
-          newsletters that break down the latest in tech and AI — all written to
-          be accessible, informative, and fun to read.
-        </p>
-        <div class="lios-button-group">
-          <a
-            href="https://techinformal.liosorg.com/"
-            class="lios-button frosted_background"
-            ><span>View Project</span></a
-          >
-          <a
-            href="https://github.com/LiOS-org/Tech-Informal"
-            class="lios-button frosted_background"
-            ><span>View on GitHub</span></a
-          >
-        </div>
-      </div>
+
     </div>
     <!-- Windows -->
     <!-- About -->
@@ -180,12 +96,13 @@
               <span>General Information</span>
               <div class="lios-window-value-row">
                 <span class="lios-window-key">LiOS Open Version</span>
-                <span class="lios-window-value">unrealeased, rolling</span>
+                <span class="lios-window-value">unreleased, rolling</span>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script type="module" src="assets/JS/homePage.JS"></script>
   </body>
 </html>
