--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,16 @@
   </head>
   <body>
     <nav class="lios-header-nav-2">
-      <div class="lios-header-nav-2-branding">
+      <div class="lios-header-nav-2-branding lios-frosted-glass">
         <a href="/"><img src="assets/images/favicon.png" alt="LiOS Logo" class="lios-logo" /></a>
       </div>
-      <div class="lios-header-nav-2-pebbles">
+      <div class="lios-header-nav-2-pebbles lios-frosted-glass">
         <a href="/" class="lios-header-nav-2-pebble"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-house-icon lucide-house"><path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"/><path d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/></svg></a>
         <a href="#About" class="lios-header-nav-2-pebble"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-info-icon lucide-info"><circle cx="12" cy="12" r="10"/><path d="M12 16v-4"/><path d="M12 8h.01"/></svg></a>
         <a href="https://github.com/LiOS-org" class="lios-header-nav-2-pebble"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg></a>
       </div>
     </nav>
-    <div class="lios-card hero">
+    <div class="lios-card hero lios-frosted-glass">
       <h1>Welcome to LiOS</h1>
       <p>
         LiOS is a group of small open-source projects that aim to provide
